--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.0",
     "modern-normalize": "^1.1.0",
     "suitcss-base": "^5.0.0",
+    "tailwindcss": "^2.2.19",
     "vite": "^2.6.14"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
     "postcss": "^8.4.4",
+    "postcss-import": "^14.0.2",
     "postcss-inline-svg": "^5.0.0",
     "postcss-scss": "^4.0.2",
     "postcss-sort-media-queries": "^4.2.1",
