--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "> 0.5%"
   ],
   "dependencies": {
+    "@splidejs/splide": "^3.6.6",
     "autoprefixer": "^10.4.0",
     "tailwindcss": "^2.2.19",
     "vite": "^2.6.14"
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^4.1.2",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@prettier/plugin-xml": "^1.1.0",
     "eslint": "^8.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -29,7 +30,7 @@
     "postcss-sort-media-queries": "^4.2.1",
     "postcss-sorting": "^7.0.1",
     "prettier": "^2.5.0",
-    "sass": "^1.43.5",
+    "sass": "^1.44.0",
     "stylelint": "^14.1.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
